tile_reduce, 6003 ok